--- a/hw/lesson_1/src/Resources/views/1_task.html
+++ b/hw/lesson_1/src/Resources/views/1_task.html
@@ -4,32 +4,80 @@
     <meta charset="UTF-8">
     <title>First task</title>
     <link rel="stylesheet" type="text/css" href="../styles/css/styles.css">
+    <link rel="stylesheet" href="../styles/fonts/Bad_Script/BadScript-Regular.ttf">
+    <link rel="stylesheet" href="../styles/fonts/Marck_Script/MarckScript-Regular.ttf">
+    <link rel="stylesheet" href="../styles/fonts/Marmelad/Marmelad-Regular.ttf">
+    <link rel="stylesheet" href="../styles/fonts/Neucha/Neucha.ttf">
 </head>
-<body>
-<div class="header">
-    <h1>Замечательное письмо</h1>
+<body class="container">
+<div class="letter-container">
+    <div class="header">
+        Замечательное письмо
+    </div>
+    <hr>
+    <div>
+        <p>Доброе утро, Александр</p>
+        Отправляю тебе письмо, в котором хочу рассказать:<br>
+        1. Великолепное стихотворение Александра Сергеевича Пушкина<br>
+        2. Теорему Ферма<br>
+        3. Язык C#<br>
+    </div>
+    <p>Отправить на почту <a href="mailto:anna.molybog@gmail.com">(ссылка)</a></p>
 </div>
-<hr class="first_line">
-<div>
-    <p>Доброе утро, Александр</p>
-    Отправляю тебе письмо, в котором хочу рассказать:<br>
-    1. Великолепное стихотворение Александра Сергеевича Пушкина<br>
-    2. Теорему Ферма<br>
-    3. Язык C#<br>
+    <hr>
+<div class="poem-container">
+    <div class="header">
+        Зимнее утро
+    </div>
+    <div class="poem-body">
+        <p>
+            Скользя по утреннему снегу,<br>
+            Друг милый, предадимя бегу<br>
+            Нетерпеливого коня<br>
+            И навестим поля пустын,<br>
+            Леса, недавно столь густые,<br>
+            И берег, милый для меня.<br>
+        </p>
+    </div>
+    <div class="poem-footer">
+        <p>
+            1829<br><br>
+            А.С. Пушкин, Сочинение в трех томах.<br>
+            Санкт-Петербург: Золотой век, Диамант, 1997.<br>
+        </p>
+    </div>
 </div>
-<p>Отправить на почту <a href="mailto:anna.molybog@gmail.com">(ссылка)</a></p>
-<div class="header">
-    <h1>Зимнее утро</h1>
+    <hr>
+<div class="formula-container">
+    <div class="header">
+        ТЕОРЕМА ФЕРМА
+    </div>
+    <div>
+        <p>
+            Для любого натурального числа <span class="formula">n > 2</span> уравнение<br>
+            <span class="formula">a<sup>n</sup>+b<sup>n</sup> = c <sup>n</sup></span><br>
+            не имеет натуральных решений <span class="formula">a, b</span> и <span class="formula">с<br></span>
+        </p>
+    </div>
 </div>
-<hr class="first_line">
-<div class="poem_style">
-    Скользя по утреннему снегу,<br>
-    Друг милый, предадимя бегу<br>
-    Нетерпеливого коня<br>
-    И навестим поля пустын,<br>
-    Леса, недавно столь густые,<br>
-    И берег, милый для меня.<br>
+    <hr>
+<div class="c-language-container">
+    <div class="header">
+        Язык C#
+    </div>
+    <div>
+        <p>
+            <strong>С#</strong> (произносится си-шарп) - объектно-ориентированный язык программирования. Разработан в 1998 - 2001 годах
+            группой инженеров под руководством Андерса Хейлсберга в компании Microsoft как язык разработки приложений для платформы
+            Microsoft .NET Framework и впоследствии был стандартизирован.
+        </p>
+        <p>
+            С# относится к сембе языков с С-подобным синтаксисом, из них его синтаксис наиболее близок к C++ и Java.
+            Язык имеет статическую типизацию, поддерживает полиморфизм, перегрузку операторов (в том числе операторов
+            явного и неявного приведения типа), делегаты, атрибуты, события, свойства, обощенные типы и методы, итераторы,
+            "анонимные" функции с поддержкой замыканий, LINQ, исключения, комментарии в формате XML.
+        </p>
+    </div>
 </div>
-
 </body>
 </html>
