--- a/hw/lesson_1/src/Resources/styles/css/styles.css
+++ b/hw/lesson_1/src/Resources/styles/css/styles.css
@@ -1,3 +1,23 @@
+@font-face {
+    font-family: 'Bad Script', cursive;
+    src: url('../fonts/Bad_Script/BadScript-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'Marck Script', cursive;
+    src: url('../fonts/Marck_Script/MarckScript-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'Neucha', cursive;
+    src: url('../fonts/Neucha/Neucha.ttf');
+}
+
+@font-face {
+    font-family: 'Marmelad', sans-serif;
+    src: url('../fonts/Marmelad/Marmelad-Regular.ttf');
+}
+
 .container {
     margin: 25px;
     line-height: 1.5;
