--- a/hw/lesson_2/src/Resources/views/1_task.html
+++ b/hw/lesson_2/src/Resources/views/1_task.html
@@ -4,32 +4,9 @@
     <meta charset="UTF-8">
     <title>First task</title>
     <link rel="stylesheet" type="text/css" href="../styles/css/styles.css">
+    <script type="text/javascript" src="../styles/js/1_task.js"></script>
 </head>
 <body>
-<div class="header">
-    <h1>Замечательное письмо</h1>
-</div>
-<hr class="first_line">
-<div>
-    <p>Доброе утро, Александр</p>
-    Отправляю тебе письмо, в котором хочу рассказать:<br>
-    1. Великолепное стихотворение Александра Сергеевича Пушкина<br>
-    2. Теорему Ферма<br>
-    3. Язык C#<br>
-</div>
-<p>Отправить на почту <a href="mailto:anna.molybog@gmail.com">(ссылка)</a></p>
-<div class="header">
-    <h1>Зимнее утро</h1>
-</div>
-<hr class="first_line">
-<div class="poem_style">
-    Скользя по утреннему снегу,<br>
-    Друг милый, предадимя бегу<br>
-    Нетерпеливого коня<br>
-    И навестим поля пустын,<br>
-    Леса, недавно столь густые,<br>
-    И берег, милый для меня.<br>
-</div>
 
 </body>
 </html>
