new lessons were added

--- a/hw/lesson_2/src/Resources/views/1_task.html
+++ b/hw/lesson_2/src/Resources/views/1_task.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>First task</title>
+    <title>Formula calculation</title>
     <link rel="stylesheet" type="text/css" href="../styles/css/styles.css">
     <script type="text/javascript" src="../styles/js/1_task.js"></script>
 </head>
